T-7337 theme/standard-totara: Fixed some issues on dialogs add/delete button display. Made IE6 work in a more basic way whereby the hover delete button is always visible

--- a/theme/standard-totara/styles_totara.css
+++ b/theme/standard-totara/styles_totara.css
@@ -2031,16 +2031,18 @@ div.totara-dialog .selected p {
 
 div.totara-dialog .selected span {
     width: 100%;
-    display: table;
+    display: block;
     font-size: 12px;
-    margin-bottom: 4px;
+    margin-bottom: 10px;
+    overflow: auto;
 }
 
 div.totara-dialog .selected span a {
-    display: table-cell;
+    display: block;
     text-decoration: none;
-    padding: 2px 4px 2px 4px;
     cursor: text;
+    float: left;
+    width: 80%;
 }
 
 div.totara-dialog .selected span.unclickable {
@@ -2051,8 +2053,9 @@ div.totara-dialog .selected span.unclickable {
 
 div.totara-dialog .selected span span.addbutton,
 div.totara-dialog .selected span span.deletebutton {
-    display: table-cell;
-    width: 16px;
+    display: block;
+    width: 18%;
+    float:right;
     cursor: pointer;
     background: none;
     text-indent: -999px;
